[tool.poetry]
name = "evotravel"
version = "0.1"
description = "Evotravel"
authors = [
    "Rodrigo Santos <rodrigo4zevedo@gmail.com>",
]

[tool.poetry.dependencies]
python = "~=3.11"
deap = "~=1.3"
joblib = "~=1.2"
folium = "~=0.14"
selenium = "~=4.8"
imageio = "~=2.27"
notebook = "~=6.5"

[build-system]
requires = ["poetry_core==1.2.2"]
build-backend = "poetry.core.masonry.api"